# dbt_glue_merge

./: .env-example  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
macros/: from_current_buckets.sql
models/: macros.yml
models/refined/: customer_test.sql
seeds/: customer_2022_10_01.csv
sources/: customer.yml
